# apl-golf-league-backend

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  APLGolfLeagueDatabaseSetup.sql  Dockerfile  GEMINI.md  README.md  apl_golf_league_database.py  database_test_flights.py  database_test_players.py  deploy-production.sh  deploy-staging.sh  docker-compose.aplgolfapi.local.yml  docker-compose.aplgolfapi.production.yml  docker-compose.aplgolfapi.staging.yml  docker-compose.aplgolfapi.yml  docker-compose.mongodb.yml  docker-compose.override.yml  docker-compose.postgresql.yml  docker-compose.traefik.local.yml  docker-compose.traefik.yml  docker-compose.yml  golf_course.py  golf_flight.py  golf_flight_division.py  golf_hole.py  golf_hole_result.py  golf_models.py  golf_player.py  golf_player_contact.py  golf_round.py  golf_tee_set.py  golf_track.py  init_database_courses.py  init_database_flights.py  init_database_rosters.py  logging.config  old_test_database.py  (+21 more)
.github/workflows/: build-and-push-api.yml  check-formatting.yml  deploy-api.yml  deploy-production.yml  (+5 more)
alembic/: env.py
app/: APLDBTestQueries.sql  add_test_entries_to_database.py  api.py  compile_season_stats.py  compute_tournament_handicaps.py  config.py  dependencies.py  finalize_flight_setup.py  init_apl_database.py  init_dev_database.py  main.py  scheduler.py  test_usga_handicap.py  update_golfer_handicaps.py  usga_handicap.py  validate_database_entries.py
migrations/: env.py  script.py.mako
scripts/: aplgolf_handicaps.ipynb
tests/: conftest.py  utilities.py
(+126 files in other folders)
