[project]
name = "apl-golf-league-backend"
version = "v0.0.1"
description = "Backend services for APL Golf League website"
authors = [
    { name = "Andris Jaunzemis", email = "adjaunzemis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.89.1,<1.0.0",
    "fastapi-mail>=1.2.4,<2.0.0",
    "httpx>=0.23.3,<1.0.0",
    "Jinja2>=3.1.3,<4.0.0",
    "loguru>=0.6.0,<1.0.0",
    "numpy>=1.22.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "protobuf>=3.19.5,<6.0.0",
    "psycopg2>=2.9.5,<3.0.0",
    "pydantic[dotenv]==1.10.19",
    "pymongo>=4.3.3,<5.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "rocketry>=2.5.1,<3.0.0",
    "sqlmodel>=0.0.4,<1.0.0",
    "uvicorn>=0.15.0,<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "hypothesis>=6.99.8,<7.0.0",
    "ipykernel>=6.29.4,<7.0.0",
    "matplotlib>=3.8.3,<4.0.0",
    "pandas>=2.2.1,<3.0.0",
    "pre-commit>=2.21.0,<5.0.0",
    "pytest>=6.2.5,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff==0.8.0",
    "seaborn>=0.13.2,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F401", "I"]
